feat: add progress until redis
